--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'd a 17 year old dual enrollment student sometimes referred to as a Jack of all trades.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in the Virgin Islands and raised in Florida.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to play games, build computers, work on cars, and watch anime.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A Stock trader</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Florida</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It could be a useful skill in the future</p>
     </section>
 
     <footer id="footer">
