fixed and spelling error

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'd a 17 year old dual enrollment student sometimes referred to as a Jack of all trades.</p>
+      <p>I'm a 17 year old dual enrollment student sometimes referred to as a Jack of all trades.</p>
       <h1>Where I'm From</h1>
       <p>I was born in the Virgin Islands and raised in Florida.</p>
       <h1>What are your favorite hobbies?</h1>
